Update hu.json (POEditor.com)

--- a/PaperZee/utils/lang/hu.json
+++ b/PaperZee/utils/lang/hu.json
@@ -319,8 +319,8 @@
         "Points": "Pont",
         "Deploys": "Telepítés",
         "Activity": "Aktivitás",
-        "Days of": "",
-        "Total": "",
+        "Days of": "Napok",
+        "Total": "Össz",
         "Renovate": "Renoválás"
     }
 }
