--- a/utils/lang/en-gb.json
+++ b/utils/lang/en-gb.json
@@ -411,5 +411,14 @@
         "points": "{min} - {max} Points",
         "average": "Avg. {avg}",
         "type_points": "{min} - {max} (Avg. {avg}) Points"
+    },
+    "error": {
+        "cuppazee_5xx": "Oops, CuppaZee's servers responsed with an error. Try again later.",
+        "cuppazee_404": "Oops, CuppaZee's servers couldn't figure out what you wanted. Try again later.",
+        "cuppazee_generic": "Oops, something went wrong when requesting data from CuppaZee's servers. Try again later.",
+        "munzee_api_5xx": "Oops, Munzee's servers responsed with an error. Try again later.",
+        "munzee_api_404": "Oops, Munzee's servers couldn't figure out what you wanted. Try again later.",
+        "munzee_api_generic": "Oops, something went wrong when requesting data from Munzee's servers. Try again later.",
+        "missing_login": "Oops, this user needs to log into CuppaZee for this feature to work!"
     }
 }
