Update cs.json (POEditor.com)

--- a/utils/lang/cs.json
+++ b/utils/lang/cs.json
@@ -38,7 +38,9 @@
             "email": "nebo přes email na support@cuppazee.app"
         },
         "clans": "Klany",
-        "logging_in": "Přihlašuji ..."
+        "logging_in": "Přihlašuji ...",
+        "evo_planner": "Plánování evolucí",
+        "weekly_challenge": "Týdenní výzvy"
     },
     "activity": {
         "user_captured": "{user} zachytil",
@@ -85,6 +87,12 @@
             "one": "{count} renovace Vašeho munzee",
             "few": "{count} renovace Vašich munzee",
             "other": "{count} renovací Vašich munzee"
+        },
+        "filters": {
+            "update": "Upravit filtry",
+            "activity": "Aktivita",
+            "state": "Země",
+            "category": "Kategorie"
         }
     },
     "user": {
@@ -106,7 +114,16 @@
         "sh_pro": "Speciální lovec (těžká verze)",
         "your_clan": "Váš klan",
         "no_clan": "Nejste v klanu",
-        "no_clan_desc": "Podívejte se na váš postup"
+        "no_clan_desc": "Podívejte se na váš postup",
+        "points": {
+            "one": "{n} bod",
+            "few": "{n} body",
+            "other": "{n} bodů"
+        },
+        "blast_checker": "Plánování bomb",
+        "qrew_checker": "Kontrola QRew",
+        "poi_challenge": "POI Výzva",
+        "colour_challenge": "Barevná výzva"
     },
     "inventory": {
         "undeployed": "Neumístěné",
@@ -136,7 +153,8 @@
             "danish": "Dánština",
             "portugese": "Portugalština",
             "lithuanian": "Litevština"
-        }
+        },
+        "kofi_donate": "Jednorázově přes Ko-Fi"
     },
     "your_bouncers": {
         "capture": {
@@ -206,7 +224,13 @@
             "hosts": "Hostuje",
             "possible_types": "Možné typy",
             "possible_hosts": "Možní hostitelé",
-            "host_types": "Sedící na"
+            "host_types": "Sedící na",
+            "points": "Body",
+            "capture": "Zachycení",
+            "capon": "Zachycení vlastní",
+            "deploy": "Založení",
+            "split": "Rozdělení bodů pro chytajícího a majitele",
+            "split_val": "{split} (minimálně {min})"
         },
         "type_info": "Informace o typu"
     },
@@ -275,8 +299,8 @@
         "task_6": "Založení placáků",
         "task_7": "Zachycení/založení ubytování",
         "task_8": "Zachycení cestovatelů",
-        "task_9": "Zachycení/publikace placáků",
-        "task_10": "Chytit /m/GPSmAQ/1"
+        "task_9": "Zachycení/založení placatých přátel",
+        "task_10": "Zachycení \"/m/GPSmAQ/1\""
     },
     "themes": {
         "black": "Černá",
@@ -319,7 +343,15 @@
         "DBType": "Typ databáze",
         "DBSearch": "Hledání v databázi",
         "DBCategory": "Kategorie databáze",
-        "Auth": "Přihlásit se"
+        "Auth": "Přihlásit se",
+        "UserPOI": "Výzva POI",
+        "UserColour": "Barevná výzva",
+        "UserQRew": "Kontrola QRew",
+        "UserBlast": "Kontrola bomby",
+        "UserBlastMap": "Kontrola bomby",
+        "WeeklyWeeks": "Týdenní výzva",
+        "WeeklyLeaderboard": "Týdenní žebříček",
+        "AllUsers": "Všichni uživatelé"
     },
     "changelog": {
         "build_n": "Sestaveni {n}",
@@ -334,5 +366,75 @@
         "Days of": "Dní",
         "Total": "Celkem",
         "Renovate": "Renovace"
+    },
+    "weekly": {
+        "ended_at": "Skončilo v {time}",
+        "starts_at": "Začíná v {time}",
+        "ends_at": "Končí v {time}",
+        "results_at": "Výsledky v {time}",
+        "points": {
+            "one": "{count} Bod",
+            "few": "{count} Body",
+            "other": "{count} Boů"
+        },
+        "week": "Týden {n}",
+        "status": {
+            "comingsoon": "Zatím nezačalo",
+            "preparing": "Připravuji",
+            "ongoing": "Probíhající",
+            "resultssoon": "Počítám výsledky",
+            "finalresults": "Závěrečné výsledky"
+        }
+    },
+    "qrew": {
+        "check_time": "Kontroluji způsobilost pro další období",
+        "captures": "Zachycení",
+        "deploys": "Založení",
+        "premium": "Prémiový hráč",
+        "physical_captures": "Fyzických zachycení",
+        "physical_deploys": "Fyzických založení",
+        "total_points": "Celkem bodů",
+        "recent_capture": "Nedávné zachycení",
+        "recent_deploy": "Nedávné založení",
+        "no_capture": "Žádné zachycení od {from} do {to}",
+        "no_deploy": "Žádné založení od {from} do {to}"
+    },
+    "evo_planner": {
+        "days": {
+            "one": "{count} Den",
+            "few": "{count} Dny",
+            "other": "{count} Dní"
+        },
+        "stage": "Fáze {n}",
+        "types": {
+            "original": "3 Fáze (např. Farma, Vzdělání)",
+            "nature": "5 Fází (např. Karafiát, Růže)",
+            "bouncer": "5 Fází (např. Motýl, Želva)"
+        }
+    },
+    "blast_checker": {
+        "types": {
+            "mini": "Malá",
+            "normal": "Normální",
+            "mega": "Velká"
+        },
+        "blast": "Bomby {n}",
+        "munzees": {
+            "one": "{count} Munzee",
+            "few": "{count} Munzee",
+            "other": "{count} Munzee"
+        },
+        "points": "{min} - {max} Bodů",
+        "average": "Průměr. {avg}",
+        "type_points": "{min} - {max} (Průměr. {avg}) Bodů"
+    },
+    "error": {
+        "cuppazee_5xx": "Hups, CuppaZee server odpověděl chybou. Zkuste to prosím později.",
+        "cuppazee_404": "Hups, CuppaZee server nepochopil co po něm chcete. Zkuste to prosím později.",
+        "cuppazee_generic": "Hups, něco se rozbilo při vyřizování požadavku od CuppaZee serveru. Zkuste to prosím později.",
+        "munzee_api_5xx": "Hups, Munzee server odpověděl chybou. Zkuste to prosím později.",
+        "munzee_api_404": "Hups, Munzee server nepochopil co po něm chcete. Zkuste to prosím později.",
+        "munzee_api_generic": "Hups, něco se rozbilo při vyřizování požadavku od Munzee serveru. Zkuste to prosím později.",
+        "missing_login": "Hups, tento uživatel musí být přihlášený do CuppaZee, aby to fungovalo."
     }
 }
